--- a/Nasa-Meteorite/package.json
+++ b/Nasa-Meteorite/package.json
@@ -13,7 +13,10 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.15",
+    "@mui/icons-material": "^5.14.19",
     "@mui/joy": "^5.0.0-beta.17",
+    "@mui/material": "^5.14.20",
+    "axios": "^1.6.2",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
   },
